--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,14 +321,11 @@ th {
 }
 
 .info-bar {
+    margin-top: 20px;
+    padding: 15px;
     background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
-    text-align: center;
+    color: white;
+    border-radius: 5px;
 }
 
 .info-bar p {
